# snake

./: .gitignore  .gitmodules  Aether.cpp  Aether.h  CMakeLists.txt  Graph.cpp  Graph.h  Limb.cpp  Limb.h  Snake.cpp  Snake.h  Snek.cpp  Snek.h  Vertex.h  betterCircle.txt  main.cpp  process.pdn  todo.txt
